--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
 <!-- Particle Canvas Background -->
+<!-- Particle Canvas Background -->
 <canvas id="particleCanvas"></canvas>
 
 <!-- Floating Orbs -->
