--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 </section>
 
 <!-- Next Steps Section -->
+ <section id="services">
 <section style="text-align:center;padding:3rem 2rem;">
   <h2 class="section-title">Choose Where to Engage</h2>
   <p class="section-subtitle">
