--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 
       <div class="contact-card">
         <div class="contact-icon">📱</div>
-        <h4>Call Me</h4>
+        <h4>Call Us</h4>
         <a href="tel:+918767147642" class="contact-link">+91 8767147642</a>
       </div>
 
