--- a/index.html
+++ b/index.html
@@ -417,8 +417,8 @@
 </footer>
 
 <!-- Cursor Effect -->
-<div class="cursor-dot"></div>
-<div class="cursor-outline"></div>
+<!--<div class="cursor-dot"></div>-->
+<!--<div class="cursor-outline"></div>-->
 
 <script src="script.js"></script>
 </body>
