--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <title>Vector Design – Product Engineering & Prototyping</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@400;600;700;800&family=Geist:wght@400;500;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="styles.css?v=3">
+
 </head>
 <body>
 
@@ -418,8 +419,8 @@
 
 <!-- Cursor Effect -->
 <!--<div class="cursor-dot"></div>-->
-<!--<div class="cursor-outline"></div>-->
+<!--  <div class="cursor-outline"></div>-->
 
-<script src="script.js"></script>
+<script src="script.js?v=3"></script>
 </body>
 </html>
