--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Vector Design – Product Engineering & Prototyping</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@400;600;700;800&family=Geist:wght@400;500;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="styles.css?v=3">
+<link rel="stylesheet" href="styles.css?v=Final">
 
 </head>
 <body>
