--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
       <div class="contact-card">
         <div class="contact-icon">📧</div>
         <h4>Email</h4>
-        <a href="mailto:workforameya@gmail.com" class="contact-link">workforameya@gmail.com</a>
+        <a href="/cdn-cgi/l/email-protection#a6d1c9d4cdc0c9d4c7cbc3dfc7e6c1cbc7cfca88c5c9cb" class="contact-link"><span class="__cf_email__" data-cfemail="a7d0c8d5ccc1c8d5c6cac2dec6e7c0cac6cecb89c4c8ca">[email&#160;protected]</span></a>
       </div>
 
       <div class="contact-card">
@@ -417,10 +417,4 @@
   <p style="color:var(--text-muted);margin-top:.5rem;">© <span id="year"></span> Vector Design · All rights reserved</p>
 </footer>
 
-<!-- Cursor Effect -->
-<!--<div class="cursor-dot"></div>-->
-<!--  <div class="cursor-outline"></div>-->
-
-<script src="script.js?v=3"></script>
-</body>
-</html>
+<!-- Cursor Effect 
