--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 <title>Vector Design – Product Engineering & Prototyping</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@400;600;700;800&family=Geist:wght@400;500;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="styles.css?v=Final">
-
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -386,7 +385,7 @@
       <div class="contact-card">
         <div class="contact-icon">📧</div>
         <h4>Email</h4>
-        <a href="/cdn-cgi/l/email-protection#a6d1c9d4cdc0c9d4c7cbc3dfc7e6c1cbc7cfca88c5c9cb" class="contact-link"><span class="__cf_email__" data-cfemail="a7d0c8d5ccc1c8d5c6cac2dec6e7c0cac6cecb89c4c8ca">[email&#160;protected]</span></a>
+        <a href="mailto:workforameya@gmail.com" class="contact-link">workforameya@gmail.com</a>
       </div>
 
       <div class="contact-card">
@@ -417,4 +416,10 @@
   <p style="color:var(--text-muted);margin-top:.5rem;">© <span id="year"></span> Vector Design · All rights reserved</p>
 </footer>
 
-<!-- Cursor Effect 
+<!-- Cursor Effect -->
+<!--<div class="cursor-dot"></div>-->
+<!--<div class="cursor-outline"></div>-->
+
+<script src="script.js"></script>
+</body>
+</html>
